update endpoint documentation #1
