# src/app/controllers/extended_api/v1/extended_issue_statuses_controller.rb
@@ -6,33 +6,33 @@ module ExtendedApi
       accept_api_auth :create, :show, :update, :destroy
 
       def show
-        render :json => IssueStatus.sorted
+        render json: IssueStatus.sorted
       end
 
       def create
-        if params[:issue_status].nil?
-          render :status => :bad_request, :json => { errors: "no issue status data provided" }
+        if params.nil? || params.empty?
+          render :status => :bad_request, :json => { errors: 'no issue status data provided' }
         else
           @issue_status = IssueStatus.new
           @issue_status.safe_attributes = params[:issue_status]
           if @issue_status.save
-            render :json => {}, :status => :created
+            render json: {}, status: :created
           else
-            render :json => { errors: @issue_status.errors }, :status => :bad_request
+            render json: { errors: @issue_status.errors }, status: :bad_request
           end
         end
       end
 
       def update
         if params[:id].nil?
-          render :status => :bad_request, :json => { errors: "no issue status id provided" }
-        elsif params[:issue_status].nil?
-          render :status => :bad_request, :json => { errors: "no issue status data provided" }
+          render :status => :bad_request, :json => { errors: 'no issue status id provided' }
+        elsif params.nil?
+          render :status => :bad_request, :json => { errors: 'no issue status data provided' }
         else
           @issue_status = IssueStatus.find(params[:id])
-          @issue_status.safe_attributes = params[:issue_status]
+          @issue_status.safe_attributes = params
           if @issue_status.save
-            render :json => { issue_status: @issue_status }
+            render :json => @issue_status
           else
             render :status => :bad_request, :json => { errors: @issue_status.errors }
           end
@@ -43,13 +43,13 @@ module ExtendedApi
         @issue_status = IssueStatus.find(params[:id])
         begin
           if @issue_status.destroy
-            render :status => :no_content, :json => {}
+            render json: @issue_status
           else
-            render :status => :bad_request, :json => { errors: @issue_status.errors }
+            render status: :bad_request, json: { errors: @issue_status.errors }
           end
         rescue StandardError => e
           # we need to catch the error otherwise it would lead to an unhandled server error
-          render :status => :bad_request, :json => { errors:  l(:error_unable_delete_issue_status, ERB::Util.h(e.message)) }
+          render status: :bad_request, json: { errors:  [l(:error_unable_delete_issue_status, ERB::Util.h(e.message))] }
         end
       end
     end
